--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
