--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-is": "^18.2.0",
     "react-password-strength-bar": "^0.4.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -23,7 +24,6 @@
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
-    "vue-coverflow": "^2.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -54,5 +54,8 @@
   },
   "main": "index.js",
   "author": "lucy-pill <schmidtiana95@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "source-map-loader": "^4.0.0"
+  }
 }
