--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,13 @@
 .DS_Store
 .env.local
 .env.development.local
+.env.development
 .env.test.local
+.env.test
 .env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/server
